# cooklang-android

./: .gitignore  .gitmodules  LICENSE  README.md  Test.java  build.gradle  gpr.properties.sample  org_cooklang_Parser.c  org_cooklang_Parser.h  org_cooklang_jni_Parser.c  org_cooklang_jni_Parser.h  settings.gradle  shell.nix
app/: build.gradle
app/src/androidTest/java/org/cooklang/parser/: ExampleInstrumentedTest.kt
app/src/androidTest/java/org/cooklang/sample_app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/cooklang/parser/: MainActivity.kt
app/src/main/java/org/cooklang/sample_app/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/cooklang/parser/: ExampleUnitTest.kt
app/src/test/java/org/cooklang/sample_app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
org/cooklang/: Cookware.java  DirectionItem.java  Equipment.java  Ingredient.java  Parser.java  Quantity.java  Recipe.java  Step.java  TextItem.java  Timer.java
org/cooklang/jni/: Parser.java
parser/: build.gradle
parser/src/main/: AndroidManifest.xml
parser/src/main/cpp/: CMakeLists.txt  parser.c  parser.cpp  parser.h
parser/src/main/java/org/cooklang/parser/: Cookware.kt  (+14 more)
parser/src/main/java/uniffi/cooklang_bindings/: cooklang_bindings.kt
rust_lib/: Cargo.toml  build.rs
rust_lib/.cargo/: config.toml
rust_lib/src/: cooklang.udl  lib.rs  reverse.udl
sync/: build.gradle
sync/src/main/java/uniffi/cooklang_sync_client/: cooklang_sync_client.kt
(+12 files in other folders)
