[package]
name = "cooklang-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "uniffi_cooklang"
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.23.0" }
cooklang = { git = "https://github.com/cooklang/cooklang-rs",  branch="uniffi-compatible" }

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"